--- a/account/templates/account/signup_result.html
+++ b/account/templates/account/signup_result.html
@@ -1,4 +1,4 @@
     <p>注册成功!</p>
     <p>{{user.username}}</p>
-    <p>name done!</p>
+    <p>well done!</p>
     <img src="{{user.headImg}}" alt=""/>
